# SFML-Paddle-Game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Ball.cpp  Ball.h  Paddle.cpp  Paddle.h  Scorecard.cpp  Scorecard.h
